--- a/package.json
+++ b/package.json
@@ -16,24 +16,24 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.4.0",
+		"eslint-plugin-svelte3": "^3.4.1",
+		"prettier": "~2.4.1",
+		"prettier-plugin-svelte": "^2.6.0"
+	},
+	"type": "module",
+	"dependencies": {
 		"@sveltejs/adapter-node": "next",
 		"@tailwindcss/custom-forms": "^0.2.1",
 		"@typescript-eslint/eslint-plugin": "^4.33.0",
 		"@typescript-eslint/parser": "^4.33.0",
 		"dotenv": "^16.0.0",
-		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.4.0",
-		"eslint-plugin-svelte3": "^3.4.1",
-		"prettier": "~2.4.1",
-		"prettier-plugin-svelte": "^2.6.0",
 		"svelte": "^3.46.4",
 		"svelte-check": "^2.4.5",
 		"svelte-preprocess": "^4.10.4",
 		"tslib": "^2.3.1",
-		"typescript": "^4.5.5"
-	},
-	"type": "module",
-	"dependencies": {
+		"typescript": "^4.5.5",
 		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.2",
 		"chokidar": "^3.5.3",
@@ -42,8 +42,6 @@
 		"postcss": "^8.4.7",
 		"postcss-cli": "^9.1.0",
 		"postcss-load-config": "^3.1.3",
-		"socket.io": "^4.4.1",
-		"socket.io-client": "^4.4.1",
 		"tailwindcss": "^3.0.23",
 		"tesseract.js": "^2.1.5"
 	}
