--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
 		"allowSyntheticDefaultImports": true,
 		"paths": {
 			"$lib/*": ["src/lib/*"],
-			"$app/*": ["src/*"]
+			"$/*": ["src/*"]
 		}
 	},
 	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte", "src/**/*.json"]
