--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
 		"useDefineForClassFields": true,
 		"allowSyntheticDefaultImports": true,
 		"paths": {
+			"$lib": ["src/lib"],
 			"$lib/*": ["src/lib/*"],
 			"$/*": ["src/*"]
 		}
