--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --write --plugin-search-dir=. ."
+		"format": "prettier --write --plugin-search-dir=. .",
+		"test": "playwright test",
+		"test:ci": "start-server-and-test preview http://localhost:3000 test"
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.20.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.4.0",
 		"eslint-plugin-svelte3": "^3.4.1",
@@ -25,24 +28,25 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-node": "next",
+		"@sveltejs/kit": "next",
 		"@tailwindcss/custom-forms": "^0.2.1",
 		"@typescript-eslint/eslint-plugin": "^4.33.0",
 		"@typescript-eslint/parser": "^4.33.0",
-		"dotenv": "^16.0.0",
-		"svelte": "^3.46.4",
-		"svelte-check": "^2.4.5",
-		"svelte-preprocess": "^4.10.4",
-		"tslib": "^2.3.1",
-		"typescript": "^4.5.5",
-		"@sveltejs/kit": "next",
 		"autoprefixer": "^10.4.2",
 		"chokidar": "^3.5.3",
 		"color": "^4.2.1",
 		"cssnano": "^5.0.17",
+		"dotenv": "^16.0.0",
 		"postcss": "^8.4.7",
 		"postcss-cli": "^9.1.0",
 		"postcss-load-config": "^3.1.3",
+		"start-server-and-test": "^1.14.0",
+		"svelte": "^3.46.4",
+		"svelte-check": "^2.4.5",
+		"svelte-preprocess": "^4.10.4",
 		"tailwindcss": "^3.0.23",
-		"tesseract.js": "^2.1.5"
+		"tesseract.js": "^2.1.5",
+		"tslib": "^2.3.1",
+		"typescript": "^4.5.5"
 	}
 }
