--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,17 +5,10 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  pull_request:
-    types:
-      - opened
-      - edited
-    branches:
-      - main
-      - develop
   push:
-    branches: [main]
-    paths-ignore:
-      - '**/README.md'
+    branches: [main, develop]
+  pull_request:
+    branches: [main, develop]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
