--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,8 @@ jobs:
         run: pnpm i
       - name: Build
         run: pnpm build
+      - name: tar node_modules
+        run: tar -cf build.tar ./.svelte-kit
       - name: upload .svelte-kit
         uses: actions/upload-artifact@v2
         with:
