--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,8 +2,12 @@ name: Playwright Tests
 on:
   push:
     branches: [main, develop]
+    paths:
+      - './src/**/*'
+      - './tests/**/*'
   pull_request:
     branches: [main, develop]
+
 jobs:
   test:
     timeout-minutes: 60
