--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,11 @@ jobs:
         run: pnpm i
       - name: Install Playwright
         run: npx playwright install --with-deps
+      - name: Cache browsers
+        uses: actions/cache@v1
+        with:
+          path: '~/.cache/ms-playwright/'
+          key: ${{ runner.os }}-browsers
       - name: build
         run: pnpm run build
       - name: Run Playwright tests
