--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,8 @@ on:
       - './tests/**/*'
   pull_request:
     branches: [main, develop]
+  workflow_dispatch:
+  workflow_call:
 
 jobs:
   test:
