--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,5 +11,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: 'tesseractjs-svelteE'
+          heroku_app_name: 'tesseractjs-svelte'
           heroku_email: 'magnusaga@gmail.com'
