--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,8 +8,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: set app based on branch
+        if: github.ref == 'main'
+        env:
+          App_name: tesseractjs-svelte
       - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: 'tesseractjs-svelte'
+          heroku_app_name: $App_name
           heroku_email: 'magnusaga@gmail.com'
